@@ -19,6 +19,12 @@ Improvements
   requiring strict access alignment.
 
 
+Bugs fixed
+----------
+
+- Fixed compatibitily problems with numpy 1.9 (closes :issue:`362`)
+
+
 Changes from 3.1.0 to 3.1.1
 ===========================
 
